--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </nav>
       <div class="row row1">
-        <div class="col col1">
+        <div class="col-lg-6 col-sm-12 col1">
           <div class="introduction">
             <h2>Hi</h2>
             <h1>
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="row row2">
-        <div class="col row2col1">
+        <div class="col-lg-6 col-sm-12 row2col1">
           <img src="download (1).jpg" alt="" />
         </div>
         <div class="col skillsdescription">
