--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               I'm
               <span style="color: #ff0060">Dumangas</span>
             </h1>
-            <h2>a Website Developer</h2>
+            <h2>a Website Designer</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse
               minima veritatis magni! Nobis temporibus minima enim quidem, unde
